src/objects/Kombucha_Configuration__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Kombucha Configuration Data.</description>
    
    <!-- default settings -->
    <fields>
        <fullName>Instance_URL__c</fullName>
        <label>Instance URL</label>
        <length>80</length>
        <type>Text</type>
    </fields>
     <fields>
        <fullName>Hour__c</fullName>
        <label>Hour</label>
        <length>10</length>
        <type>Text</type>
        <defaultValue>'4'</defaultValue>
    </fields>
    <fields>
        <fullName>Minute__c</fullName>
        <label>Minute</label>
        <length>10</length>
        <type>Text</type>
        <defaultValue>'0'</defaultValue>
    </fields>
    <fields>
        <fullName>CodeCoverage__c</fullName>
        <label>Code Coverage</label>
        <length>10</length>
        <type>Text</type>
    </fields>

    <fields>
        <fullName>CronJobId_TestJobQueuer__c</fullName>
        <label>Cron Job Id for TestJobQueuer</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CronJobName_TestJobQueuer__c</fullName>
        <label>Cron Job Name for TestJobQueuer</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CronJobId_CodeCoverageCalculator__c</fullName>
        <label>Cron Job Id for CodeCoverageCalculator</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CronJobName_CodeCoverageCalculator__c</fullName>
        <label>Cron Job Name for CodeCoverageCalculator</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CronJobId_SlackPoster__c</fullName>
        <label>Cron Job Id for SlackPoster</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CronJobName_SlackPoster__c</fullName>
        <label>Cron Job Name for SlackPoster</label>
        <length>40</length>
        <type>Text</type>
    </fields>

    <!-- general settings -->
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Security_Code__c</fullName>
        <label>Security Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>


    <!-- search settings -->
    <fields>
        <fullName>Namespace__c</fullName>
        <label>Namespace</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Query1__c</fullName>
        <label>Query 1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Query2__c</fullName>
        <label>Query 2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Query3__c</fullName>
        <label>Query 3</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Query1_Position__c</fullName>
        <label>Query1 Position</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Query2_Position__c</fullName>
        <label>Query2 Position</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Query3_Position__c</fullName>
        <label>Query3 Position</label>
        <length>10</length>
        <type>Text</type>
    </fields>

    <!-- apexclass settings -->
    <fields>
        <fullName>ApexClass_Namespace__c</fullName>
        <label>ApexClass Namespace</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApexClass_Query1__c</fullName>
        <label>ApexClass Query 1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApexClass_Query2__c</fullName>
        <label>ApexClass Query 2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApexClass_Query3__c</fullName>
        <label>ApexClass Query 3</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApexClass_Query1_Position__c</fullName>
        <label>ApexClass Query1 Position</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApexClass_Query2_Position__c</fullName>
        <label>ApexClass Query2 Position</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApexClass_Query3_Position__c</fullName>
        <label>ApexClass Query3 Position</label>
        <length>10</length>
        <type>Text</type>
    </fields>

    <!-- email settings -->
    <fields>
        <fullName>Recipient__c</fullName>
        <label>Recipient</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Slack_Endpoint__c</fullName>
        <label>Slack Endpoint</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Slack_Request__c</fullName>
        <label>Slack Request</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Add_Date__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Add Date</label>
        <type>Checkbox</type>
    </fields>
    

    <label>Kombucha Configuration</label>
</CustomObject>